--- a/www/package.json
+++ b/www/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "angular": "^1.6.6",
     "angular-ui-router": "^1.0.3",
+    "leaflet": "^1.2.0",
     "mobile-angular-ui": "^1.3.4"
   }
 }
