--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "dependencies": {
         "cordova-android": "^6.2.3",
         "cordova-ios": "^4.4.0",
+        "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-console": "git+https://github.com/apache/cordova-plugin-console.git",
+        "cordova-plugin-geolocation": "git+https://github.com/apache/cordova-plugin-geolocation.git",
         "cordova-plugin-statusbar": "git+https://github.com/apache/cordova-plugin-statusbar.git",
         "cordova-plugin-whitelist": "^1.3.2",
         "webpack-shell-plugin": "^0.5.0"
@@ -19,7 +21,10 @@
         "plugins": {
             "cordova-plugin-whitelist": {},
             "cordova-plugin-console": {},
-            "cordova-plugin-statusbar": {}
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-geolocation": {
+                "GEOLOCATION_USAGE_DESCRIPTION": " "
+            }
         },
         "platforms": [
             "android",
