--- a/www/package.json
+++ b/www/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "angular": "^1.6.6",
+    "angular-bootstrap-toggle": "^0.1.2",
     "core-js": "^2.5.0",
     "leaflet": "^1.2.0",
     "mobile-angular-ui": "^1.3.4"
