--- a/www/package.json
+++ b/www/package.json
@@ -4,6 +4,7 @@
     "angular-bootstrap-toggle": "^0.1.2",
     "core-js": "^2.5.0",
     "leaflet": "^1.2.0",
+    "leaflet-control-geocoder": "^1.5.5",
     "mobile-angular-ui": "^1.3.4"
   }
 }
