gitignore now ignores npm-debug.log

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ www/bundle.css
 www/bundle.css.map
 www/bundle.js
 www/bundle.js.map
+
+# these happen if npm crashes and are not useful to keep in version control
+npm-debug.log
