--- a/package.json
+++ b/package.json
@@ -1,56 +1,55 @@
 {
-    "name": "org.greeninfo.mobilemapstarter2",
-    "version": "1.0.0",
-    "scripts": {
-        "build": "webpack --config webpack.config.js --hide-modules=true --display-origins=false --display-provided-exports=false --colors --progress",
-        "watch": "webpack --config webpack.config.js --hide-modules=true --display-origins=false --display-provided-exports=false --colors --progress --watch",
-        "splash": "cordova-splash",
-        "icon": "cordova-icon"
+  "name": "org.greeninfo.mobilemapstarter2",
+  "version": "1.2.0",
+  "scripts": {
+    "build": "webpack --config webpack.config.js --hide-modules=true --display-origins=false --display-provided-exports=false --colors --progress",
+    "watch": "webpack --config webpack.config.js --hide-modules=true --display-origins=false --display-provided-exports=false --colors --progress --watch",
+    "splash": "cordova-splash",
+    "icon": "cordova-icon"
+  },
+  "author": "GreenInfo Network",
+  "license": "Apache-2.0",
+  "dependencies": {
+    "cordova-android": "^7.0.0",
+    "cordova-ios": "^4.5.4",
+    "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-console": "^1.1.0",
+    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file-transfer": "^1.7.1",
+    "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "webpack-shell-plugin": "^0.5.0"
+  },
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-console": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-geolocation": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-compat": {}
     },
-    "author": "GreenInfo Network",
-    "license": "Apache-2.0",
-    "dependencies": {
-        "cordova-android": "^6.2.3",
-        "cordova-ios": "^4.4.0",
-        "cordova-plugin-compat": "^1.1.0",
-        "cordova-plugin-console": "git+https://github.com/apache/cordova-plugin-console.git",
-        "cordova-plugin-file": "^4.3.3",
-        "cordova-plugin-file-transfer": "^1.6.3",
-        "cordova-plugin-geolocation": "git+https://github.com/apache/cordova-plugin-geolocation.git",
-        "cordova-plugin-statusbar": "git+https://github.com/apache/cordova-plugin-statusbar.git",
-        "cordova-plugin-whitelist": "^1.3.2",
-        "webpack-shell-plugin": "^0.5.0"
-    },
-    "cordova": {
-        "plugins": {
-            "cordova-plugin-whitelist": {},
-            "cordova-plugin-console": {},
-            "cordova-plugin-statusbar": {},
-            "cordova-plugin-geolocation": {
-                "GEOLOCATION_USAGE_DESCRIPTION": " "
-            },
-            "cordova-plugin-file-transfer": {},
-            "cordova-plugin-file": {}
-        },
-        "platforms": [
-            "android",
-            "ios"
-        ]
-    },
-    "devDependencies": {
-        "babel-core": "^6.26.0",
-        "babel-loader": "^7.1.2",
-        "babel-preset-es2015": "^6.24.1",
-        "cordova-icon": "^0.9.1",
-        "cordova-splash": "^0.9.0",
-        "css-loader": "^0.28.5",
-        "extract-text-webpack-plugin": "^3.0.0",
-        "ignore-loader": "^0.1.2",
-        "jshint": "^2.9.5",
-        "jshint-loader": "^0.8.4",
-        "node-sass": "^4.5.3",
-        "sass-loader": "^6.0.6",
-        "style-loader": "^0.18.2",
-        "webpack": "^3.5.5"
-    }
+    "platforms": [
+      "ios",
+      "android"
+    ]
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
+    "cordova-icon": "^1.0.0",
+    "cordova-splash": "^1.0.0",
+    "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "ignore-loader": "^0.1.2",
+    "jshint": "^2.9.5",
+    "jshint-loader": "^0.8.4",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
+    "webpack": "^3.1.0"
+  }
 }
