Rework Cordova as a dev-dependency, so as not to rely on global-instaled

--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
+    "cordova": "^8.0.0",
     "cordova-icon": "^1.0.0",
+    "cordova-imaging": "^0.0.6",
     "cordova-splash": "^1.0.0",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.2",
